Fix proj1 format