@@ -5,7 +5,7 @@ import java.util.Comparator;
 public class MaxArrayDeque<T> extends ArrayDeque<T> {
     private Comparator<T> cmp;
 
-    public MaxArrayDeque (Comparator<T> c) {
+    public MaxArrayDeque(Comparator<T> c) {
         super();
         cmp = c;
     }
@@ -14,7 +14,7 @@ public class MaxArrayDeque<T> extends ArrayDeque<T> {
         if (isEmpty()) {
             return null;
         }
-        T maxItem = this.getFirst();
+        T maxItem = this.get(0);
         for (T i : this) {
             if (cmp.compare(maxItem, i) > 0) {
                 maxItem = i;
@@ -27,7 +27,7 @@ public class MaxArrayDeque<T> extends ArrayDeque<T> {
         if (isEmpty()) {
             return null;
         }
-        T maxItem = this.getFirst();
+        T maxItem = this.get(0);
         for (T i : this) {
             if (c.compare(maxItem, i) > 0) {
                 maxItem = i;
